--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
   <h1>
      {{ title }}
   </h1>
-
-  <app-heroes></app-heroes>
-  <app-dashboard></app-dashboard>
+  <nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Heroes</a>
   
+  
+  </nav>
+
+  <!-- <app-heroes></app-heroes> -->
+  
+  <router-outlet></router-outlet>
   <app-logs></app-logs>
