--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,7 +8,8 @@
   <div>
     <label>
       <input [(ngModel)]="heroDetails.name" placeholder="name">
-      <button (click)="delete()">Delete</button>
+      <button (click)="delete()">Delete</button> 
+      <button (click)="goBack()">Go Back</button> 
     </label>
   </div>
 
