--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,18 +1,14 @@
 
-<app-hero-detail [heroDetails]="selectedHero" (deleteRequest)="deleteHero($event)"></app-hero-detail>
-
 
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li>
-     
-    <span > nd </span> <span class="hero-data"> Id </span>  Hero's name
+
+    <span> nd </span> <span class="hero-data"> Id </span> Hero's name
   </li>
-  <li *ngFor="let hero of heroes; let i=index ; trackBy:fn"
-      (click)="onSelect(hero)"
-      
-      [class.selected]="hero === selectedHero"
-      >
-    <span class="badge">{{i + 1}} </span> {{hero.id}} {{hero.name}}
+  <li *ngFor="let hero of heroes; let i=index ; trackBy:fn">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{i + 1}} </span> {{hero.id}} {{hero.name}}
+    </a>
   </li>
 </ul>
