--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -4,7 +4,7 @@ label {
     width: 3em;
     margin: .5em 0;
     color: #607D8B;
-    font-weight: boldx;
+    font-weight: bold;
   }
   input {
     height: 2em;
