Branch6_HTTP_and_In-memory_Web_API

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -9,6 +9,7 @@
     <label>
       <input [(ngModel)]="heroDetails.name" placeholder="name">
       <button (click)="delete()">Delete</button> 
+      <button (click)="save()">save</button>
       <button (click)="goBack()">Go Back</button> 
     </label>
   </div>
