HeroSearchComponent: added 2 alternative functions which does not use the  "searchTerms: Subject<string>"

--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,6 +1,7 @@
 <div id="search-component">
   <h4>Hero Search</h4>
  
+  <!-- <input #searchBox id="search-box" (keyup)="search_without_subject_using_of(searchBox.value)" /> -->
   <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
  
   <ul class="search-result">
